# TL_Item_Condition_Classifier

./: .gitignore  Makefile  PLAN_PARTE1.md  README.md  new_or_used.py  pyproject.toml
notebooks/: 01_eda.ipynb
reports/: CODE_DOCUMENTATION.md  COMPLIANCE_AUDIT.md  REPORT.md  ablation_listing_type.json  ablation_listing_type.md  baselines_comparison.md  eda_findings.json  eda_findings.md  error_analysis_summary.md  errors_top100.csv  feature_catalog.md  final_test_metrics.json  lgbm_metrics.json  lr_full_metrics.json  lr_text_only_metrics.json  optuna_study.json  threshold_sweep.json
src/: __init__.py  config.py  data.py  features.py
src/eda/: __init__.py  runner.py
src/eval/: __init__.py  error_analysis.py  metrics.py  run_test.py  threshold.py
src/experiments/: __init__.py  ablation_listing_type.py
src/models/: __init__.py  lightgbm_model.py  lr_baseline.py  lr_text_only.py  xgboost_model.py
